# jira-digest-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json
.claude/: settings.json
.github/workflows/: publish.yml
docs/: initial_spec.md
docs/superpowers/plans/: 2026-05-13-jira-digest-mcp.md
docs/superpowers/specs/: 2026-05-13-jira-digest-mcp-design.md
src/jira_digest_mcp/: __init__.py  jira_client.py  jql.py  models.py  server.py
tests/: test_jql.py  test_models.py
