[project]
name = "jira-digest-mcp"
version = "0.1.3"
description = "MCP server exposing a get_resolved_issues tool that queries resolved Jira tickets across multiple Atlassian Cloud sites with one credential pair."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Rob Prouse", email = "rob@prouse.org" }
]
requires-python = ">=3.12"
keywords = ["mcp", "jira", "atlassian", "fastmcp", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.1",
    "pydantic>=2.13.4",
]

[project.scripts]
jira-digest-mcp = "jira_digest_mcp.server:main"

[project.urls]
Homepage = "https://github.com/rprouse/jira-digest-mcp"
Repository = "https://github.com/rprouse/jira-digest-mcp"
Issues = "https://github.com/rprouse/jira-digest-mcp/issues"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
